trunk/Archive2/e7/e83be5f8f05a03/output
main.cpp: In function 'int main()':
main.cpp:5:14: error: invalid conversion from 'int (*)[2]' to 'int' [-fpermissive]
     int s = &a;
              ^
main.cpp:5:9: warning: unused variable 's' [-Wunused-variable]
     int s = &a;
         ^
